1.9 preparation part 3
- Parameterized commands inheriting BotCommand with their respective types
- Wildcard added inside commands.Help when looping
- commands.Position inner classes 'AbstractPosition', 'LongPosition', and 'CrabPosition' have been made static
- Added @Nullable annotations in Squiz.handleNextQuestion
- Inner classes in commands.Vault became static such as 'Uniswapv3FuckYouMath', 'Amount0Amount1'
- Removed redundant casting in commands.Vault
- Resolved single-arg Arrays.asList into List.of throughout the commands
-
- Bumped pom.xml to 1.9 from 1.9-test